monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:352730764496:certificate/4302a7b9-0ef7-4e05-8e4b-88e89ada1991
    alb.ingress.kubernetes.io/group.name: eks-stag-poc
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200,302,301,404
    # alb.ingress.kubernetes.io/tags: eks-stag-poc=true
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: stag-ingress
  namespace: monitoring 
spec:
  ingressClassName: alb
  rules:
  - host: frontend-app.cmrinfo.in
    http:
      paths:
      - backend:
          service:
            name: inflate
            port:
              number: 80
        path: /
        pathType: Prefix
  # - host: backend-app.cmrinfo.in
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: backend-app
  #           port:
  #             number: 3000
  #       path: /
  #       pathType: Prefix
